# irrig8

./: --full-page  .gitignore  .gitmodules  830-lyell-homeowner.txt  AMBIENT_CAPTURE_RUN_2026-04-02_2112.md  AmbientCapture-LOG-run-2026-04-02-1255.md  AmbientCapture-LOG-run-2026-04-02-1410.md  AmbientCapture-LOG-run-2026-04-03-1940.md  AmbientCapture-LOG-run-2026-04-04-0840.md  AmbientCapture-LOG-run-2026-04-04-2140.md  AmbientCapture-LOG-run-2026-04-04-2240.md  AmbientCapture-LOG-run-2026-04-05-0210.md  AmbientCapture-LOG-run-2026-04-05-0240.md  AmbientCapture-LOG-run-2026-04-06-0029.md  AmbientCapture-LOG.md  BUSINESS-PLAN.md  BX3Framework.bib  BX3Framework_Paper_FULL.bbl  BX3Framework_Paper_FULL.blg  BX3Framework_Paper_FULL.out  BX3_ECOSYSTEM_ARCHITECTURE_v1.0.md  BX3_Recursive_Spawning_Introduction.tex  BX3_Recursive_Spawning_Section_4.tex  BX3_Recursive_Spawning_Sections_6_7.tex  BailoutProtocol.bib  BailoutProtocol_FULL.out  BailoutProtocol_FULL.thm  BailoutProtocol_FULL_v2.out  BailoutProtocol_Introduction.tex  BailoutProtocol_Section2_Background.tex  BailoutProtocol_Section2_Background_v2.tex  BailoutProtocol_Section3.tex  BailoutProtocol_Section3_Complete.tex  BailoutProtocol_Section3_Fresh.tex  BailoutProtocol_Section3_TheBailoutProtocol.tex  BailoutProtocol_Section3_complete.tex  BailoutProtocol_Section3_v3.tex  BailoutProtocol_Section4_Implementation.tex  BailoutProtocol_Section4_Implementation_FRESH.tex  BailoutProtocol_Section4_Implementation_fresh.tex  (+69 more)
Bxthre3/agentic/: .dockerignore  AGENTS.md  BOOTSTRAP.py  BUILD.txt  BUILD_STATUS.md  Cargo.toml  MERGED_SPEC.md  README.md  SUPER_SPEC.md  TEST_PY.txt  TOOL_MANIFEST.md  TRAINING_LIFECYCLE.md  build.sh
Bxthre3/agentic/agents/: hr_agent.py  maintenance_agent.py  ops_agent.py  starting5_roster.py  workforce_registry.py
Bxthre3/agentic/cascade/: cascade-engine.ts
Bxthre3/agentic/core/: config.py  db.py  department_sops.json  persona.py  security.py
Bxthre3/agentic/engine/: dap-engine.ts  fte.ts
Bxthre3/agentic/kernel/: auth_service.py  ecosystem_skills.py  kernel_main.py  pulse.py  registry.py  resource_monitor.py  schema.py  shared_voice.py  task_context.py  tool_registry.py  voice_service.py  workflow_engine.py
Bxthre3/agentic/mesh/: __init__.py  actions_log.py  auth.py  command_bus.py  extensions_manager.py  (+2 more)
(+4027 files in other folders)
